clusters/belacca-production/routing/azure-without-azure-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: azure-without-azure-http
  namespace: azure-without-azure
  labels:
    belacca.com/component: routing
    belacca.com/project: azure-without-azure
    belacca.com/stage: native-production
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: azure-without-azure-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: azure.belacca.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: azure-without-azure
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: azure-without-azure-https
  namespace: azure-without-azure
  labels:
    belacca.com/component: routing
    belacca.com/project: azure-without-azure
    belacca.com/stage: native-production
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - secretName: azure-without-azure-tls
      hosts: [azure.belacca.com]
  rules:
    - host: azure.belacca.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: azure-without-azure
                port:
                  number: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: azure-without-azure-redirect-https
  namespace: azure-without-azure
  labels:
    belacca.com/component: routing
    belacca.com/project: azure-without-azure
    belacca.com/stage: native-production
spec:
  redirectScheme:
    scheme: https
    permanent: true
