clusters/belacca-production/routing/pong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pong-http
  namespace: pong
  labels:
    belacca.com/component: routing
    belacca.com/project: pong
    belacca.com/stage: native-production
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: pong-pong-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: pong.belacca.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pong-gateway
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pong-https
  namespace: pong
  labels:
    belacca.com/component: routing
    belacca.com/project: pong
    belacca.com/stage: native-production
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - secretName: pong-tls
      hosts:
        - pong.belacca.com
  rules:
    - host: pong.belacca.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pong-gateway
                port:
                  name: http
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: pong-redirect-https
  namespace: pong
  labels:
    belacca.com/component: routing
    belacca.com/project: pong
    belacca.com/stage: native-production
spec:
  redirectScheme:
    scheme: https
    permanent: true
